#30 add delete operations to services and controllers; docs upd;
